# research_lab_finder

./: .env.example  .env.integrated.example  .gitignore  Makefile  README.md  README_v1.md  api_debug_script.sh  api_fix_script.sh  api_test_fix.sh  application_layer_implementation.sh  apply_university_info_fix.sh  comprehensive_ts_fix.sh  debug_navigation_issues.sh  deployment_troubleshooting_guide.md  developer_guide_and_roadmap.md  docker-compose.prod.yml  docker-compose.yml  docker_compose.yml  domain_layer_implementation.sh  efficient_project_structure.sh  expanded_immune_labs_database.py  final_system_summary.md  final_ts_cleanup.sh  fix_admin_dashboard.sh  fix_duplicate_function.sh  fix_navigation_and_similar_labs.sh  fix_similar_labs_university_info.sh  fix_similarity_score.sh  health.bat  health_simple.sh  immune_research_scraper.py  infrastructure_layer_implementation.sh  integrated_project_structure.md  local_dev_test.sh  project_structure.md  project_structure_check.sh  pyproject.toml  real_immune_scraper.py  requirements.txt  research_lab_finder_requirements.md  (+9 more)
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/endpoints/: labs.py  search.py  universities.py
backend/app/api/utils/: data_loader.py
backend/app/core/: semantic_search.py
backend/app/utils/: data_loader.py
backend/tests/: conftest.py
database/: complete_schema.sql  init.sql
docs/: comprehensive_scraping_strategy.md  revised_scraping_strategy.md
frontend/: .dockerignore  Dockerfile  index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx  ErrorMessage.tsx  Footer.tsx  Header.tsx  LabCard.tsx  LoadingSpinner.tsx  PopularSearches.tsx  SearchBox.tsx
frontend/src/components/__tests__/: SearchBox.test.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AdminDashboard.tsx  Home.tsx  LabDetail.tsx  SearchResults.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
requirements/: backend.txt  base.txt  dev.txt  scraper.txt
scraper/application/orchestration/: scraper_factory.py
scraper/application/pipelines/: lab_processing.py
scraper/application/scrapers/: agriculture_scraper.py  medical_scraper.py  university_scraper_base.py
scraper/config/: interfaces.py  settings.py
scraper/config/keywords/: admission_keywords.yaml  agriculture_keywords.yaml  medical_keywords.yaml
scraper/domain/: keyword_analyzer.py  research_lab.py  university.py
scraper/infrastructure/http/: http_client.py  rate_limiter.py  retry_handler.py
scraper/infrastructure/parsers/: base_parser.py  content_parser.py
scripts/: final_verification.sh  integration_test.py  quick_start_python39.sh  setup.sh  setup_integrated.sh  setup_python39_compatible.sh
